Changes to index to navigation for login

--- a/index1.html
+++ b/index1.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <h3>Welcome to foodie, we deliver food in no time</h3>
+        <a href="login.html">"CLICK HERE TO LOGIN"</a>
     </body>
 </html>
